Fix response endpoint no swagger e no controle_service.
